# s2600wf-misc

./: .gitmodules  CMakeLists.txt  Jenkinsfile  MAINTAINERS  OWNERS  README.md  callback-manager  groups  hsbp-manager  meson.build  project.config
callback-manager/: .gitignore  CMakeLists.txt  README.md  meson.build
callback-manager/include/: callback_manager.hpp
callback-manager/service_files/: callback-manager.service
callback-manager/src/: callback_manager.cpp
hsbp-manager/: CMakeLists.txt  meson.build
hsbp-manager/include/: utils.hpp
hsbp-manager/service_files/: hsbp-manager.service
hsbp-manager/src/: hsbp_manager.cpp
include/: commandutils.hpp  sensorcommands.hpp  sensorutils.hpp  storagecommands.hpp  variantvisitors.hpp
sel-logger/: CMakeLists.txt
sel-logger/src/: sel-logger.cpp
sensors/include/: TachSensor.hpp  sensor.hpp
sensors/src/: ADCSensor.cpp  ADCSensorMain.cpp  CPUSensor.cpp  CPUSensorMain.cpp  FanMain.cpp  HwmonTempMain.cpp  HwmonTempSensor.cpp  PwmSensor.cpp  TachSensor.cpp  Thresholds.cpp  Utils.cpp
src/: sensorcommands.cpp  sensorutils.cpp
subprojects/callback-manager/: README.md  meson.build
subprojects/callback-manager/include/: callback_manager.hpp
subprojects/callback-manager/src/: callback_manager.cpp
subprojects/hsbp-manager/: meson.build
subprojects/hsbp-manager/include/: utils.hpp
subprojects/hsbp-manager/src/: hsbp_manager.cpp
tests/: test_sensorcommands.cpp
